# FEP_RL_VAE

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
examples/: AGENTS.md  README.md  basic_vae_training.py  exploratory_training.py  visualization_demo.py
scripts/: setup_general_fep_rl.sh  validate_setup.py
src/fep_rl_vae/: AGENTS.md  README.md  __init__.py
src/fep_rl_vae/decoders/: AGENTS.md  README.md  __init__.py  description.py  image.py  number.py
src/fep_rl_vae/encoders/: AGENTS.md  README.md  __init__.py  description.py  image.py  number.py
src/fep_rl_vae/utils/: AGENTS.md  README.md  __init__.py  logging.py  plotting.py
src/fep_rl_vae/visualization/: AGENTS.md  README.md  __init__.py  descriptions.py  images.py  models.py  numbers.py  training.py  utils.py
tests/: AGENTS.md  README.md  __init__.py  conftest.py  test_data.py  test_models.py  test_utils.py  test_visualization.py
